2003-01-08  Patrick Doyle  <wpd@delcomsys.com>

	* include/hal_cache.h: Changed HAL_ICACHE_LINE_SIZE and
	HAL_DCACHE_LINE_SIZE to match the documentation from TI.  Now the
	kcache2 test passes the two tests that it runs.

2002-03-06  Nick Garnett  <nickg@redhat.com>

	* include/hal_cache.h: Added support for ARM966E. This does not
	have a cache, so this involved adding support for cacheless ARM9s
	in general.

	* cdl/hal_arm_arm9.cdl: Added option for ARM966E.

2002-01-28  Jesper Skov  <jskov@redhat.com>

	* include/hal_cache.h: Only define HAL_VIRT_TO_PHYS_ADDRESS if it
	isn't already defined. This needs renaming and a cleanup, but this
	quick #ifdef hack fixes a compiler warning.

	* cdl/hal_arm_arm9.cdl: Declare var_io.h.

	* include/var_io.h: Added.

2001-11-16  Jesper Skov  <jskov@redhat.com>

	* src/arm9_misc.c (hal_hardware_init): Don't invalidate caches on
	RAM startup.

2001-11-07  Jesper Skov  <jskov@redhat.com>

	* src/arm9_misc.c (cyg_hal_arm9_soft_reset): Also put CPU in SVC
	mode (as after a reset). Still broken though.

2001-11-06  Gary Thomas  <gthomas@redhat.com>

	* include/hal_cache.h: Add virtual->physical translation setup.

2001-11-01  Jesper Skov  <jskov@redhat.com>

	* src/arm9_misc.c (cyg_hal_arm9_soft_reset): Attempt at soft
	reset. Doesn't quite work though, and it's unclear why.

2001-10-28  Gary Thomas  <gthomas@redhat.com>

	* include/hal_cache.h: Fix DATA cache flush for 920,922.  This was
	off-by-one, leaving part of the cache unflushed.

2001-08-13  Jesper Skov  <jskov@redhat.com>

	* include/hal_cache.h: Support ARM variants 920, 922, 925 and 940.

2001-04-30  Gary Thomas  <gthomas@redhat.com>

	* src/arm9_misc.c (hal_hardware_init): Use CDL configuration to
	decide which caches should be enabled at startup time.

2001-04-26  Gary Thomas  <gthomas@redhat.com>

	* src/arm9_misc.c (hal_hardware_init): Caches just don't seem to work.

	* include/hal_cache.h: Fix cache parameters - 16K x 16K

2001-04-18  Jesper Skov  <jskov@redhat.com>